# stc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PROJECT  README.md  build.sh  go.mod  go.sum  main.go  skaffold.yaml
api/v1alpha1/: groupversion_info.go  syncthingcluster_types.go  zz_generated.deepcopy.go
chart/: Chart.yaml  values.yaml
chart/crds/: stc.samcday.com_syncthingclusters.yaml
chart/templates/: _helpers.tpl  config.yaml  deployment.yaml  role.yaml  serviceaccount.yaml  syncthingcluster.yaml
config/crd/: kustomization.yaml
config/crd/bases/: stc.samcday.com_syncthingclusters.yaml
config/crd/patches/: cainjection_in_syncthingclusters.yaml  webhook_in_syncthingclusters.yaml
config/default/: kustomization.yaml
config/manager/: controller_manager_config.yaml  manager.yaml
config/prometheus/: monitor.yaml
config/rbac/: auth_proxy_client_clusterrole.yaml  auth_proxy_role.yaml  auth_proxy_role_binding.yaml  auth_proxy_service.yaml  leader_election_role.yaml  leader_election_role_binding.yaml  role.yaml  role_binding.yaml  service_account.yaml  syncthingcluster_editor_role.yaml  syncthingcluster_viewer_role.yaml
config/samples/: _v1alpha1_syncthingcluster.yaml
controllers/: pvc_controller.go  suite_test.go  syncthingcluster_controller.go
csi/: Dockerfile  go.mod  go.sum  main.go  skaffold.yaml
csi/k8s/: test.yaml
hack/: boilerplate.go.txt
src/: crdgen.rs  lib.rs  main.rs
